[package]
name = "digit_recognition"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.17.0", features = ["dataset", "ndarray", "train"] }
burn-common = "0.17.0"
burn-dataset = { version = "0.17.0", features = ["vision"] }
clap = { version = "4.5.38", features = ["cargo"] }
dirs = "6.0.0"
flate2 = "1.1.1"
rand = "0.9.1"
serde = "1.0.219"
